--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
   </head>
   <body>
       <header class="page-header" role="banner">
-      <h1 class="project-name">Project 0 Presentations</h1>
+      <h1 class="project-name">Guidelines to submit Project 0 Presentation</h1>
     </header>
 
     <main id="content" class="main-content" role="main">
